--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app-portafolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://danielstilenis24.github.io/app-portafolio/",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -12,6 +13,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "gh-pages": "^4.0.0",
     "ityped": "^1.0.3",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
@@ -21,6 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
