--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@mui/material": "^5.8.1",
+    "@mui/material": "^5.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
     "emailjs-com": "^3.2.0",
     "ityped": "^1.0.3",
     "node-sass": "^7.0.1",
@@ -19,6 +20,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
+    "react-particles-js": "^3.6.0",
     "react-scripts": "5.0.1",
     "react-typical": "^0.1.3",
     "web-vitals": "^2.1.4"
